Fix alignment issues with footer

--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -26,14 +26,24 @@ a:hover {
 body {
   margin: 0;
   display: flex;
+  flex-direction: column;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
 
+footer {
+  bottom: 0;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+main {
+  /* Make sure main content fills the page */
+  flex: 1;
 }
 
 ul {
